fix lỗi khi modal hiện lên thì header không bị ảnh hưởng bằng cách cho z-index của modal lớn hơn header (vì hiện tại cả 2 đều được position fixed)

--- a/w3_band/assets/css/style.css
+++ b/w3_band/assets/css/style.css
@@ -312,6 +312,7 @@ html {
     display: none;
     align-items: center;
     justify-content: center;
+    z-index: 1000;
 }
 
 .modal.open {
